--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600&family=Bebas+Neue&family=Londrina+Solid&family=Quattrocento&family=Satisfy&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
-
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, Bebas Neue,
-    sans-serif;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, Bebas Neue, Barlow,
+    Quattrocento, Londrina, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -32,7 +31,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  /* display: flex; */
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
